# moxin

./: .env.example  .gitignore  RAG_RESEARCH_DOCUMENTATION.md  README.md  pyproject.toml
deployment/: DEPLOYMENT_GUIDE.md  SETUP_COMPLETE.md  deploy.sh
docs/: RAG_BEST_PRACTICES.md  RAG_QUICK_REFERENCE.md  RAG_RESEARCH_SUMMARY.md  README.md
src/: __init__.py
src/cli/: index_novel.py
src/deploy/: __init__.py  gradio_app.py  migrate_to_qdrant.py
src/llm/: __init__.py
src/novel/: __init__.py  parser.py
src/rag/: __init__.py  chunker.py  embeddings.py  vectorstore.py
tests/: __init__.py  test_chunker.py  test_novel_parser.py
