[project]
name = "moxin"
version = "0.1.0"
description = "AI-assisted novel writing tool with RAG capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yifeng" }
]

dependencies = [
    # LLM & API Integration
    "openai>=1.0.0",           # For OpenRouter API (OpenAI-compatible)
    "httpx>=0.24.0",           # Async HTTP client

    # RAG & Vector Storage
    "langchain>=0.1.0",        # RAG framework
    "langchain-community>=0.0.1",
    "langchain-chroma>=0.1.0", # ChromaDB integration
    "chromadb>=0.4.22",        # Vector database
    "sentence-transformers>=2.2.0",  # Embedding models

    # Document Processing
    "tiktoken>=0.5.0",         # Token counting
    "jieba>=0.42.1",           # Chinese text segmentation

    # Utilities
    "python-dotenv>=1.0.0",    # Environment variables
    "pyyaml>=6.0",             # YAML config
    "pydantic>=2.0.0",         # Data validation
    "rich>=13.0.0",            # Beautiful CLI output
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",

    # Code Quality
    "ruff>=0.1.0",             # Linting and formatting
    "mypy>=1.7.0",             # Type checking
]

web = [
    # Web Interface (optional)
    "streamlit>=1.29.0",       # Web UI
    "plotly>=5.18.0",          # Interactive charts
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
